# tjurm2025-test1

./: CMakeLists.txt  README.md  main.cpp
include/: tests.h  utils.h
src/: tests.cpp  utils.cpp
